--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "EasyServer",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "express": "^4.17.1",
+    "typescript": "^4.3.4"
+  }
 }
